--- a/css/index.css
+++ b/css/index.css
@@ -200,3 +200,24 @@ h3 {
     left: 270px;
     top: 220px;
 }
+
+.qwq {
+    position: relative;
+}
+
+.imgs {
+    width: 645px;
+    height: 500px;
+    position: absolute;
+    right: 100px;
+    top: -50px;
+}
+
+h4 {
+    position: absolute;
+    right: 270px;
+    top: -140px;
+    font-size: 50px;
+    font-weight: normal;
+    color: skyblue;
+}
